Set DELEGATE for parents of other objects, bug 700300.