js/src/jit-test/tests/basic/bug700300.js
@@ -1,0 +1,4 @@
+for (let j = 0; j < (20); ++(__lookupSetter__)) {
+  function g() { j; }
+  j++;
+}
